# cryptography-resources

./: Makefile  README.md  generate_mnemonic.sh  generate_mnemonic_eth.sh  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: ci.yml  security-audit.yml
BIP39/: README-BIP39.md  derive_bitcoin_keys.py  derive_ethereum_keys.py  derive_solana_keys.py  generate_eth.py  mnemonic_generator.py  requirements.txt  secure_mnemonic_generate.py
docs/: security-review.md
tests/: __init__.py  generate_entropy_report.py  test_entropy_validation.py  test_functionality.py
